--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,7 +16,7 @@ $silver: #bdc3c7;
 // $color-1: #304269;
 
 // AW Blue
-$color-1: #34495e;
+$color-1: #222669;
 
 // Blue 2
 $color-2: #91BED4;
@@ -29,8 +29,11 @@ $color-4: #FFFFFF;
 
 // Orange
 // $color-5: #F26101;
-$color-5: #E74C3C;
-$color-5-alt: #c0392b;
+// $color-5: #E74C3C;
+
+// AW chosen
+$color-5: #76B2A1;
+$color-5-alt: #51776c;
 
 
 // $primary-color: $Pickled-Bluewood;
